--- a/Specification/1x06.md
+++ b/Specification/1x06.md
@@ -1,1 +1,165 @@
+Вот расширенная спецификация по блоку **1.6 — Масштабирование и шардирование** из Пакета 1 — Архитектура и Хранилище.
+
+---
+
+# 🌐 Блок 1.6 — Масштабирование и шардирование
+
+---
+
+## 🆔 Идентификатор блока
+
+| Категория | Значение                             |
+| --------- | ------------------------------------ |
+| 📦 Пакет  | 1 — Архитектура и Хранилище          |
+| 🔢 Блок   | 1.6 — Масштабирование и шардирование |
+
+---
+
+## 🎯 Назначение
+
+Блок отвечает за горизонтальное масштабирование базы данных за счёт:
+
+* **Разделения (sharding)** таблиц и данных по shard-единицам,
+* **Динамического ребалансинга** shard'ов по узлам и NUMA-узлам,
+* Поддержки **автоматического распределения** входящих запросов и вставок,
+* **Репликации shard'ов** для отказоустойчивости,
+* Взаимодействия с планировщиком и координатором кластера.
+
+---
+
+## ⚙️ Функциональность
+
+| Подсистема       | Реализация / особенности                                        |
+| ---------------- | --------------------------------------------------------------- |
+| Шардирование     | Таблицы разбиваются на shard'ы по hash, range или списку        |
+| Механизм shard   | Каждый shard содержит отдельные индексы, журнал WAL, MVCC и кеш |
+| Планирование     | Распределение запросов по shard'ам через координатор            |
+| Авто-ребаланс    | Перемещение shard'ов по узлам/NUMA при перегрузке               |
+| Репликация shard | active-passive или active-active режимы (опционально)           |
+
+---
+
+## 🔧 Основные функции на C
+
+| Имя функции       | Прототип                                                 | Назначение                             |
+| ----------------- | -------------------------------------------------------- | -------------------------------------- |
+| `shard_create()`  | `shard_t *shard_create(table_t *, shard_policy_t)`       | Создание нового shard'а                |
+| `shard_insert()`  | `bool shard_insert(shard_t *, row_t *)`                  | Вставка строки в конкретный shard      |
+| `shard_route()`   | `shard_t *shard_route(table_t *, row_t *)`               | Выбор shard для записи/запроса         |
+| `shard_migrate()` | `bool shard_migrate(shard_t *, node_id_t dst)`           | Миграция shard'а между узлами или NUMA |
+| `shard_scan()`    | `row_iter_t *shard_scan(shard_t *, const predicate_t *)` | Сканирование по конкретному shard      |
+
+---
+
+## 📊 Метрики
+
+| Метрика                     | Источник   | Цель                               |
+| --------------------------- | ---------- | ---------------------------------- |
+| `shard_count_total`         | Meta       | ≥ 5000 для масштабируемости        |
+| `shard_migration_time_ms`   | Rebalancer | < 250 мс при живой миграции        |
+| `shard_imbalance_ratio`     | Monitor    | < 10% отклонения по shard-нагрузке |
+| `insert_latency_by_shard`   | WAL/logger | < 500 мкс                          |
+| `rebalance_events_per_hour` | Rebalancer | ≤ 5–10 в рабочем кластере          |
+
+---
+
+## 📂 Связанные модули кода
+
+```
+src/shard.c
+src/shard_router.c
+src/cluster.c
+src/rebalancer.c
+src/partition.c
+include/shard.h
+include/cluster.h
+```
+
+---
+
+## 🧠 Особенности реализации
+
+* Каждому shard соответствует своя WAL-журнализация и буфер
+* Шардирование может быть multi-level (например, per-branch → per-date)
+* Состояние shard'ов отслеживается в кластерном реестре (активность, нагрузка)
+* Возможность горячей миграции shard'а с синхронизацией WAL и MVCC
+* Маршрутизатор запоминает "распределение" ключей на shard'ы
+
+---
+
+## 🧪 Тестирование
+
+| Вид теста   | Методика / покрытие                       | Где расположен               |
+| ----------- | ----------------------------------------- | ---------------------------- |
+| Unit        | Создание, вставка и сканирование shard'ов | `tests/shard/test_basic.c`   |
+| Integration | Переключение shard между NUMA и узлами    | `tests/shard/test_migrate.c` |
+| Soak        | 100K TPS с авто-ребалансом                | `tests/stress/shard_load.c`  |
+| Fault-inj   | Прерывание миграции во время WAL          | `fuzz/fuzz_shard_migrate.c`  |
+
+---
+
+## 📐 UML — Архитектура шардирования
+
+```plantuml
+@startuml
+entity "Table" {
+  +id
+  +schema
+}
+
+rectangle "Shard 0" {
+  WAL_0
+  MVCC_0
+  DATA_0
+}
+rectangle "Shard 1" {
+  WAL_1
+  MVCC_1
+  DATA_1
+}
+
+[Table] --> "Shard 0"
+[Table] --> "Shard 1"
+
+component Router
+Router --> "Shard 0"
+Router --> "Shard 1"
+@enduml
+```
+
+---
+
+## ✅ Соответствие SAP HANA+
+
+| Критерий                     | Оценка | Комментарий                                 |
+| ---------------------------- | ------ | ------------------------------------------- |
+| Поддержка масштабирования    | 100    | Linear scaling через шардирование           |
+| Live shard migration         | 95     | Поддерживается с WAL sync                   |
+| Router + Planner integration | 100    | Планировщик использует shard metadata       |
+| Репликация и HA-режимы       | 90     | Поддерживаются оба режима (с quorum engine) |
+
+---
+
+## 📎 Пример кода
+
+```c
+table_t *tbl = table_create(schema, STORE_ROW);
+shard_policy_t pol = {.type = SHARD_HASH, .key = "branch_id"};
+shard_create(tbl, pol);
+row_t row = generate_row();
+shard_t *target = shard_route(tbl, &row);
+shard_insert(target, &row);
+```
+
+---
+
+## 📌 Связь с бизнес-функциями
+
+* Позволяет обслуживать **500+ филиалов** и **2+ трлн записей/год** с низкой задержкой
+* Гарантирует горизонтальную масштабируемость без простоя
+* Используется для изоляции данных между регионами / клиентами / сервисами
+
+---
+
+Готов продолжить со следующим блоком: **1.7 — Индексы: B+tree, Bitmap, Inverted**? Напиши **"да"**.
 
