--- a/Specification/1x12.md
+++ b/Specification/1x12.md
@@ -1,103 +1,109 @@
-# 🧬 Блок 1.11 — Snapshot и Recovery
+# 🌡️ Блок 1.12 — Горячие / холодные данные
 
 ---
 
 ## 🆔 Идентификатор блока
 
-| Категория | Значение                    |
-| --------- | --------------------------- |
-| 📦 Пакет  | 1 — Архитектура и Хранилище |
-| 🔢 Блок   | 1.11 — Snapshot и Recovery  |
+| Категория | Значение                         |
+| --------- | -------------------------------- |
+| 📦 Пакет  | 1 — Архитектура и Хранилище      |
+| 🔢 Блок   | 1.12 — Горячие / холодные данные |
 
 ---
 
 ## 🎯 Назначение
 
-Блок реализует механизм **быстрого сохранения состояния системы (snapshot)** и восстановления (recovery) в случае сбоя или рестарта. Обеспечивает совместную работу с WAL, MVCC и buffer pool.
+Данный блок отвечает за классификацию и обработку данных в зависимости от их "температуры" (частоты доступа). Это позволяет:
+
+* Оптимизировать хранение,
+* Управлять буферизацией и eviction'ом,
+* Выстраивать авто-tiering между in-memory, SSD и NVMe,
+* Ускорить OLTP/OLAP-выборки, выделяя активно используемые фрагменты.
 
 ---
 
 ## ⚙️ Функциональность
 
-| Подсистема      | Реализация / особенности                                                |
-| --------------- | ----------------------------------------------------------------------- |
-| Snapshot Writer | Периодическая фиксация состояния всех таблиц, метаданных, индексов      |
-| Snapshot Format | Бинарный, сжатый, включает контрольную сумму                            |
-| Snapshot Loader | Быстрое восстановление при старте базы из последнего snapshot           |
-| Log Replay      | После загрузки snapshot выполняется WAL replay до актуального состояния |
-| Background Task | Снимки создаются в фоне без блокировки пользователей                    |
+| Подсистема           | Реализация / особенности                                    |
+| -------------------- | ----------------------------------------------------------- |
+| Классификация данных | Метки HOT / WARM / COLD на уровне страниц, строк, сегментов |
+| Temperature Tracking | Сбор статистики доступа (scan, update, join, read)          |
+| Adaptive Tiering     | Перемещение COLD-данных на SSD, HOT — только в RAM          |
+| Access Heuristics    | Счётчики LRU, aging, eviction priority                      |
+| TTL-интеграция       | Cold + TTL = candidates for eviction                        |
 
 ---
 
 ## 🔧 Основные функции на C
 
-| Имя функции              | Прототип                                  | Назначение                          |
-| ------------------------ | ----------------------------------------- | ----------------------------------- |
-| `snapshot_create()`      | `bool snapshot_create(const char *path)`  | Создание нового snapshot            |
-| `snapshot_load()`        | `bool snapshot_load(const char *path)`    | Загрузка snapshot при запуске       |
-| `snapshot_gc_old()`      | `void snapshot_gc_old(size_t keep_count)` | Удаление устаревших snapshot-файлов |
-| `snapshot_flush_async()` | `void snapshot_flush_async(void)`         | Инициировать фоновую фиксацию       |
+| Имя функции                 | Прототип                                         | Назначение                            |
+| --------------------------- | ------------------------------------------------ | ------------------------------------- |
+| `data_temp_init()`          | `void data_temp_init(void)`                      | Инициализация подсистемы температур   |
+| `data_touch(page_t *pg)`    | `void data_touch(page_t *pg)`                    | Отметка доступа к странице            |
+| `data_temperature(page_t*)` | `data_temp_t data_temperature(const page_t *pg)` | Определение текущей температуры       |
+| `data_tier_evict()`         | `void data_tier_evict(size_t target_pages)`      | Удаление / сброс холодных страниц     |
+| `data_promote(page_t *pg)`  | `void data_promote(page_t *pg)`                  | Поднятие холодной страницы до горячей |
 
 ---
 
 ## 📊 Метрики
 
-| Метрика                  | Источник       | Цель                  |
-| ------------------------ | -------------- | --------------------- |
-| `snapshot_time_ms`       | Profiler       | < 500 мс              |
-| `recovery_time_ms`       | Startup Logger | < 800 мс              |
-| `snapshot_size_mb`       | FS Stats       | < 20% от in-memory    |
-| `log_replay_time_ms`     | WAL subsystem  | < 200 мс              |
-| `snapshot_frequency_sec` | Configurable   | по умолчанию: 120 сек |
+| Метрика                     | Источник        | Цель            |
+| --------------------------- | --------------- | --------------- |
+| `hot_data_ratio`            | Temp Analyzer   | ≥ 10%           |
+| `cold_data_evicted_per_sec` | Eviction Engine | > 10k/сек       |
+| `page_temperature_skew`     | Cache Stats     | ≤ 20% дисбаланс |
+| `tier_migration_latency_ms` | Tiering Log     | < 3 мс          |
+| `hot_data_avg_ttl_sec`      | Access Logs     | ≥ 600 сек       |
 
 ---
 
 ## 📂 Связанные модули кода
 
 ```
-src/snapshot.c
-src/recovery.c
-src/snapshot_writer.c
-src/snapshot_loader.c
-include/snapshot.h
+src/data_temp.c
+src/tiering.c
+src/page_metadata.c
+include/data_temp.h
 ```
 
 ---
 
 ## 🧠 Особенности реализации
 
-* Формат снапшота использует **delta-encoding** и **frame-of-reference** компрессию
-* При восстановлении система определяет последнюю валидную точку
-* Используется CRC32 / SHA-256 контрольная сумма
-* Поддержка горячих snapshot без остановки сервиса
-* Интеграция с системой метрик, логирования и алертов
+* Используются lightweight atomic-счётчики на page-level
+* Поддерживается aging + decay, чтобы "охлаждать" редкоиспользуемые страницы
+* "Promotion" cold → hot происходит после N последовательных access
+* TTL-интеграция позволяет удалять устаревшие cold-страницы без нагрузки
 
 ---
 
 ## 🧪 Тестирование
 
-| Вид теста | Методика / покрытие                                | Где расположен                |
-| --------- | -------------------------------------------------- | ----------------------------- |
-| Unit      | Создание/загрузка snapshot, валидация CRC          | `tests/snapshot/test_basic.c` |
-| Stress    | 10 млн строк, многократная фиксация/восстановление | `tests/stress/snap_loop.c`    |
-| Recovery  | Комбинированная загрузка snapshot + WAL replay     | `tests/recovery/snapshot.c`   |
-| Fuzz      | Повреждённые файлы snapshot                        | `fuzz/fuzz_snapshot.c`        |
+| Вид теста | Методика / покрытие                      | Где расположен                 |
+| --------- | ---------------------------------------- | ------------------------------ |
+| Unit      | Проверка кластеризации, меток HOT/COLD   | `tests/data_temp/test_class.c` |
+| Perf      | Измерение миграций и eviction throughput | `bench/tiering_bench.c`        |
+| Fuzz      | Рандомизированные температуры и TTL      | `fuzz/fuzz_tiering.c`          |
+| Soak      | Недельный режим OLTP + OLAP нагрузок     | `tests/soak/data_migration.c`  |
 
 ---
 
-## 📐 UML — Архитектура Snapshot
+## 📐 UML — Температура и Tiered Manager
 
 ```plantuml
 @startuml
-class SnapshotManager {
-  +create()
-  +load()
-  +gc_old()
+class Page {
+  +access()
+  +temperature
 }
 
-SnapshotManager --> SnapshotFile
-SnapshotManager --> WALReader
-SnapshotFile --> TableData
+class TierManager {
+  +evict_cold()
+  +promote_hot()
+}
+
+Page --> TierManager : notify_access
 @enduml
 ```
 
@@ -105,30 +111,28 @@ SnapshotFile --> TableData
 
 ## ✅ Соответствие SAP HANA+
 
-| Критерий                      | Оценка | Комментарий                       |
-| ----------------------------- | ------ | --------------------------------- |
-| Горячие snapshot              | 100    | Без блокировки                    |
-| Snapshot + WAL recovery       | 100    | Полный state восстановим          |
-| Сжатый бинарный формат        | 95     | Используется FoR и delta encoding |
-| Поддержка нескольких snapshot | 90     | Keep count / TTL                  |
+| Критерий                    | Оценка | Комментарий                      |
+| --------------------------- | ------ | -------------------------------- |
+| Поддержка HOT/WARM/COLD     | 100    | Полный контроль и профилирование |
+| Авто-tiering + SSD fallback | 90     | Работает в фоне, без блокировок  |
+| TTL-интеграция              | 95     | Cold + TTL = авто-удаление       |
 
 ---
 
 ## 📎 Пример кода
 
 ```c
-if (!snapshot_load("/var/db/snapshots/last.snap")) {
-    log_error("recovery", "Ошибка восстановления снапшота");
-    exit(1);
+page_t *pg = page_fetch(id, true);
+data_touch(pg);  // фиксируем доступ
+if (data_temperature(pg) == TEMP_COLD) {
+    data_promote(pg); // делаем страницу горячей
 }
-snapshot_create("/var/db/snapshots/new.snap");
 ```
 
 ---
 
 ## 📌 Связь с бизнес-функциями
 
-* Обеспечивает бизнес-критичную функциональность восстановления
-* Позволяет выполнять disaster recovery и откат состояния
-* Ускоряет cold start до уровня < 1 секунды
-
+* Поддерживает SLA в high-throughput режимах
+* Позволяет изолировать архивные данные без потери доступности
+* Повышает эффективность кэширования и балансировки нагрузки
